--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "express-secure-only": "^0.2.1",
     "glob": "^7.0.3",
     "helmet": "^2.1.0",
+    "morgan": "^1.7.0",
     "request": "^2.72.0",
     "watson-developer-cloud": "^1.8.0"
   },
