--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "supertest": "^1.2.0"
   },
   "engines": {
-    "node": ">= 4.2.4"
+    "node": "^6.5.0"
   },
   "pre-commit": [
     "lint",
